Docker: install GDB into Jammy images
Change-Id: I3145a355591f65b43f3748b24d1d5a3bece8e449
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>

--- a/docker/jammy/Dockerfile
+++ b/docker/jammy/Dockerfile
@@ -46,6 +46,7 @@ RUN apt-get update -qq && \
         curl \
         flex \
         git \
+        gdb \
         help2man \
         icoutils \
         libcapnp-dev \
