Port away from qsnprinf() and mark the project free of it
qsnprintf() has been deprecated in favor of std::snprintf().

Change-Id: I3f10138188f4d0470ec852d1656af7cc157e8a31
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>
Reviewed-by: hjk <hjk@qt.io>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,6 +66,8 @@ if (QBS_INSTALL_HTML_DOCS OR QBS_INSTALL_QCH_DOCS)
     endif()
 endif()
 
+add_definitions(-DQT_NO_QSNPRINTF)
+
 add_subdirectory(src)
 add_subdirectory(doc)
 add_subdirectory(share)
