GitHub actions: add webassemly job
Change-Id: Idace4ef956a50a0c2c09d8aebbbac31bdeedc41f
Reviewed-by: Ivan Komissarov <ABBAPOH@gmail.com>
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -418,6 +418,13 @@ jobs:
             profile: '',
             script: './scripts/test-qt4.sh',
           }
+        - {
+            name: 'Run WebAssembly tests',
+            image: 'jammy-qt6-wasm',
+            suffix: 'linux-jammy',
+            profile: '',
+            script: './scripts/test-wasm.sh',
+          }
 
     env:
       QBS_TEST_SOURCE_ROOT: 'tests'
