Move CppScanner to qbscore
This allows us to use the CppScanner directly in MocScanner
without dealing with C-style plugin API.

Also, remove the additional tags API from Scanner interface
as it is only used in MocScanner.

Change-Id: Iedf788986aae22042b24d4e8a7049292b8e77a79
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>

--- a/src/lib/corelib/CMakeLists.txt
+++ b/src/lib/corelib/CMakeLists.txt
@@ -427,6 +427,20 @@ set(TOOLS_HEADERS
     )
 list_transform_prepend(TOOLS_HEADERS tools/)
 
+set(CPPSCANNER_SOURCES
+    Lexer.cpp
+    Token.cpp
+    cppscanner.cpp
+)
+list_transform_prepend(CPPSCANNER_SOURCES cppscanner/)
+
+set(CPPSCANNER_HEADERS
+    Lexer.h
+    Token.h
+    cppscanner.h
+)
+list_transform_prepend(CPPSCANNER_HEADERS cppscanner/)
+
 set(EXTERNAL_DEPENDS "")
 if(APPLE)
     set(TOOLS_MACOS_SOURCES
@@ -446,6 +460,7 @@ add_qbs_library(qbscore
         "QBS_VERSION=\"${QBS_VERSION}\""
         "QBS_RELATIVE_LIBEXEC_PATH=\"${QBS_RELATIVE_LIBEXEC_PATH}\""
         "QBS_LIBRARY"
+        "CPLUSPLUS_NO_PARSER"
         ${QBS_UNIT_TESTS_DEFINES}
     DEPENDS
         Qt${QT_VERSION_MAJOR}::CorePrivate
@@ -479,6 +494,8 @@ add_qbs_library(qbscore
         ${PARSER_SOURCES}
         ${TOOLS_SOURCES}
         ${TOOLS_HEADERS}
+        ${CPPSCANNER_SOURCES}
+        ${CPPSCANNER_HEADERS}
         ${TOOLS_MACOS_SOURCES}
     )
 
