--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,127 +23,77 @@ x-default-service: &linux
       hard: -1
 
 services:
-  jammy-qt6: &jammy-qt6
+  noble-qt6: &noble-qt6
     << : *linux
-    hostname: jammy-qt6
-    image: ${DOCKER_USER:-qbsbuild}/qbsdev:jammy-qt6-6.5.3_2.1.2-2
+    hostname: noble-qt6
+    image: ${DOCKER_USER:-qbsbuild}/qbsdev:noble-qt6-6.5.3_2.3.2-0
     build:
-      dockerfile: docker/jammy/Dockerfile
+      dockerfile: docker/noble/Dockerfile
       context: .
       args:
         QT_VERSION: 6.5.3
-        QTCREATOR_VERSION: 11.0.3
+        QTCREATOR_VERSION: 13.0.2
 
-  jammy-qt5:
+  noble:
+    << : *noble-qt6
+
+  noble-qt5:
     << : *linux
-    hostname: jammy-qt5
-    image: ${DOCKER_USER:-qbsbuild}/qbsdev:jammy-5.15.2_2.1.2-2
+    hostname: noble-qt5
+    image: ${DOCKER_USER:-qbsbuild}/qbsdev:noble-5.15.2_2.3.2-0
     build:
-      dockerfile: docker/jammy/Dockerfile
+      dockerfile: docker/noble/Dockerfile
       context: .
       args:
         QT_VERSION: 5.15.2
-        QTCREATOR_VERSION: 11.0.3
+        QTCREATOR_VERSION: 13.0.2
 
-  jammy:
-    << : *jammy-qt6
-
-  jammy-qt6-static:
+  noble-android-65:
     << : *linux
-    hostname: jammy-qt6-static
-    image: ${DOCKER_USER:-qbsbuild}/qbsdev:jammy-qt6-static-6.5.0_2.1.2-0
+    hostname: noble-android
+    image: ${DOCKER_USER:-qbsbuild}/qbsdev:noble-android-6.5.0-0
     build:
-      dockerfile: docker/jammy/test-qt6-static.Dockerfile
-      context: .
-      args:
-        QT_VERSION: 6.5.0
-        QTCREATOR_VERSION: 11.0.3
-
-  jammy-android-515:
-    << : *linux
-    hostname: jammy-android
-    image: ${DOCKER_USER:-qbsbuild}/qbsdev:jammy-android-5.15.2-1
-    build:
-      dockerfile: docker/jammy/test-android.Dockerfile
-      context: .
-      args:
-        QT_VERSION: 5.15.2
-        ANDROID_NDK_VERSION: 23.0.7599858
-
-  jammy-android-62:
-    << : *linux
-    hostname: jammy-android
-    image: ${DOCKER_USER:-qbsbuild}/qbsdev:jammy-android-6.2.4-1
-    build:
-      dockerfile: docker/jammy/test-android.Dockerfile
-      context: .
-      args:
-        QT_VERSION: 6.2.4
-        ANDROID_NDK_VERSION: 23.0.7599858
-
-  jammy-android-65:
-    << : *linux
-    hostname: jammy-android
-    image: ${DOCKER_USER:-qbsbuild}/qbsdev:jammy-android-6.5.0-1
-    build:
-      dockerfile: docker/jammy/test-android.Dockerfile
+      dockerfile: docker/noble/test-android.Dockerfile
       context: .
       args:
         QT_VERSION: 6.5.0
         ANDROID_NDK_VERSION: 25.1.8937393
 
-  jammy-android-ndk-r19c:
+  noble-android-515:
     << : *linux
-    hostname: jammy-android
-    image: ${DOCKER_USER:-qbsbuild}/qbsdev:jammy-android-ndk-r19c-1
+    hostname: noble-android
+    image: ${DOCKER_USER:-qbsbuild}/qbsdev:noble-android-5.15.2-0
     build:
-      dockerfile: docker/jammy/test-android-no-qt.Dockerfile
+      dockerfile: docker/noble/test-android.Dockerfile
       context: .
       args:
-       ANDROID_NDK_VERSION: 19.2.5345600
-
-  jammy-android-ndk-r21e:
-    << : *linux
-    hostname: jammy-android
-    image: ${DOCKER_USER:-qbsbuild}/qbsdev:jammy-android-ndk-r21e-1
-    build:
-      dockerfile: docker/jammy/test-android-no-qt.Dockerfile
-      context: .
-      args:
-        ANDROID_NDK_VERSION: 21.4.7075529
-
-  jammy-android-ndk-r23:
-    << : *linux
-    hostname: jammy-android
-    image: ${DOCKER_USER:-qbsbuild}/qbsdev:jammy-android-ndk-r23-1
-    build:
-      dockerfile: docker/jammy/test-android-no-qt.Dockerfile
-      context: .
-      args:
+        QT_VERSION: 5.15.2
         ANDROID_NDK_VERSION: 23.0.7599858
 
-  jammy-baremetal:
+  noble-android-ndk-r25:
     << : *linux
-    hostname: jammy-baremetal
-    image: ${DOCKER_USER:-qbsbuild}/qbsdev:jammy-baremetal-0
+    hostname: noble-android
+    image: ${DOCKER_USER:-qbsbuild}/qbsdev:noble-android-ndk-r25-0
     build:
-      dockerfile: docker/jammy/test-baremetal.Dockerfile
+      dockerfile: docker/noble/test-android-no-qt.Dockerfile
+      context: .
+      args:
+        ANDROID_NDK_VERSION: 25.1.8937393
+
+  noble-baremetal:
+    << : *linux
+    hostname: noble-baremetal
+    image: ${DOCKER_USER:-qbsbuild}/qbsdev:noble-baremetal-0
+    build:
+      dockerfile: docker/noble/test-baremetal.Dockerfile
       context: .
 
-  jammy-qt4:
+  noble-qt6-wasm:
     << : *linux
-    hostname: jammy-qt4
-    image: ${DOCKER_USER:-qbsbuild}/qbsdev:jammy-qt4-1
+    hostname: noble-qt6-wasm
+    image: ${DOCKER_USER:-qbsbuild}/qbsdev:noble-qt6-wasm-6.7.0-0
     build:
-      dockerfile: docker/jammy/test-qt4.Dockerfile
-      context: .
-
-  jammy-qt6-wasm:
-    << : *linux
-    hostname: jammy-qt6-wasm
-    image: ${DOCKER_USER:-qbsbuild}/qbsdev:jammy-qt6-wasm-6.7.0-0
-    build:
-      dockerfile: docker/jammy/test-qt6-wasm.Dockerfile
+      dockerfile: docker/noble/test-qt6-wasm.Dockerfile
       context: .
       args:
         QT_VERSION: 6.7.0
